--- a/full-stack.html
+++ b/full-stack.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://addmin.join.com/jobs/465004-full-stack-developer'>Job @ addmin (Lausanne): Full-stack developer  | JOIN</a></h5> 
+<p><span class="badge badge-light">Lausanne, Switzerland  Lausanne, Switzerland</span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
 <h5><a href='https://fincite.join.com/jobs/460128-full-stack-developer-m-f-d'>Job @ Fincite (Frankfurt): Full Stack Developer (m... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
@@ -86,7 +90,7 @@
 <p><span class="badge badge-light">San Francisco  San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oWXebfw2&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nYIemMwx'>DNEG Careers - Full Stack Developer (IMS)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oWXebfw2&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nYIemMwx'>DNEG Careers - Full Stack Developer (IMS)</a></h5> 
 <p><span class="badge badge-light">Mumbai Chennai, India  Mumbai</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -110,7 +114,7 @@
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/useloom/f300409a-d4cd-4510-b562-4e7afbff65ec'>Loom - Senior Full Stack Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/useloom/f300409a-d4cd-4510-b562-4e7afbff65ec'>Loom - Senior Full Stack Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -118,7 +122,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://greenjinn.com/careers/senior-full-stack-developer/'>Senior Full Stack Developer | GreenJinn</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://greenjinn.com/careers/senior-full-stack-developer/'>Senior Full Stack Developer | GreenJinn</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -239,13 +243,13 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jellysmack.recruitee.com/l/en/o/developpeur-fullstack-hf-cdi'>
+<h5><a href='https://jellysmack.recruitee.com/l/en/o/developpeur-fullstack-hf-cdi'>
       D?veloppeur Full-Stack H/F - CDI - Jellysmack
     </a></h5> 
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://nationalcreditcenter.applytojob.com/apply/7SjNEGLrml/Full-Stack-C-Developer'>Full Stack C# Developer - National Credit Center - Career Page</a></h5> 
+<h5><a href='http://nationalcreditcenter.applytojob.com/apply/7SjNEGLrml/Full-Stack-C-Developer'>Full Stack C# Developer - National Credit Center - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -265,7 +269,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://linx.recruiterbox.com/jobs/fk03i2j/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://linx.recruiterbox.com/jobs/fk03i2j/'>
     Desenvolvedor Full Stack SR at Linx
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -291,7 +295,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">San Mateo, California  Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/appdirect/jobs/4306100002'>Job Application for D?veloppeur full stack, place de march? / Full Stack Developer, Marketplace Core at AppDirect</a></h5> 
+<h5><a href='https://boards.greenhouse.io/appdirect/jobs/4306100002'>Job Application for D?veloppeur full stack, place de march? / Full Stack Developer, Marketplace Core at AppDirect</a></h5> 
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -323,7 +327,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bx-cert.ru/job/full-stack-developer-bitrix-php-javascript-jquery-cms-66233/'>? ?????????? ????????? Full - stack - developer (Bitrix, PHP, JavaScript, jQuery, CMS), ???????? ?? 40000 ?? 80000 ??????</a></h5> 
+<h5><a href='https://bx-cert.ru/job/full-stack-developer-bitrix-php-javascript-jquery-cms-66233/'>? ?????????? ????????? Full - stack - developer (Bitrix, PHP, JavaScript, jQuery, CMS), ???????? ?? 40000 ?? 80000 ??????</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -343,7 +347,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Zurich, Switzerland</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/atlassian/681f7e9d-1fe8-409e-b4f8-7c890c4174a6'>Atlassian - Senior Fullstack Software Engineer, Bitbucket</a></h5> 
+<h5><a href='https://jobs.lever.co/atlassian/681f7e9d-1fe8-409e-b4f8-7c890c4174a6'>Atlassian - Senior Fullstack Software Engineer, Bitbucket</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -367,7 +371,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Lisbon Lisbon, Portugal  Zurich, Switzerland Lisbon, Portugal Lisbon</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://dedeleads.com/job/companycam-looking-for-full-stack-software-engineer/'>CompanyCam looking for Full Stack Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedeleads.com/job/companycam-looking-for-full-stack-software-engineer/'>CompanyCam looking for Full Stack Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -461,12 +465,8 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='http://slingshotaerospace.applytojob.com/apply/j8jgd6lSYE/Senior-Full-Stack-And-Mobile-Software-Engineer'>Senior Full Stack and Mobile Software Engineer - Slingshot Aerospace - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://slingshotaerospace.applytojob.com/apply/j8jgd6lSYE/Senior-Full-Stack-And-Mobile-Software-Engineer'>Senior Full Stack and Mobile Software Engineer - Slingshot Aerospace - Career Page</a></h5> 
 <p><span class="badge badge-light">El Segundo, CA</span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/makespace/jobs/1933886'>Job Application for Senior Full-Stack Engineer (Waterloo, ON)  at MakeSpace</a></h5> 
-<p><span class="badge badge-light">Waterloo Waterloo Waterloo New York Chicago Los Angeles</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
 
